src/WebApplication1/k8s/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myapi
  namespace: myapi-stage

spec:
  replicas: 3

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: myapi

  template:
    metadata:
      labels:
        app: myapi

    spec:
      containers:
        - name: myapi

          image: myapi:master-35

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
