src/WebApplication1/k8s/stage/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: myapi-service
  namespace: myapi-stage

spec:
  selector:
    app: myapi

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
