src/WebApplication1/k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapi-ingress
  namespace: myapi-stage

spec:
  ingressClassName: nginx

  rules:
    - host: myapi-stage.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: myapi-service

                port:
                  number: 80
